// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/WithSidebar Basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="flex h-full"
  >
    <div
      className="bg-gray-100 border-r border-gray-300"
    >
      <h1>
        hello
      </h1>
    </div>
    <div
      className="overflow-auto flex-1"
    >
      Main app content
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/WithSidebar With Column Nav 1`] = `
<div
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="flex h-full"
  >
    <div
      className="bg-gray-100 border-r border-gray-300"
    >
      <nav>
        <ul
          className="list-none p-0 relative z-0"
        >
          <li
            className="relative"
          >
            <div
              className="px-6 py-3 cursor-pointer text-xs hover:text-primary-500"
            >
              Item 1
            </div>
          </li>
          <li
            className="relative"
          >
            <div
              className="px-6 py-3 cursor-pointer text-xs hover:text-primary-500"
            >
              Item 2
            </div>
          </li>
          <li
            className="relative"
          >
            <div
              className="px-6 py-3 cursor-pointer text-xs hover:text-primary-500"
            >
              Item 3 (active)
            </div>
            <div
              className="absolute -z-10 inset-0 bg-highlight"
              layoutId="highlight"
            />
          </li>
          <li
            className="relative"
          >
            <div
              className="px-6 py-3 cursor-pointer text-xs hover:text-primary-500"
            >
              Item 4
            </div>
          </li>
        </ul>
      </nav>
    </div>
    <div
      className="overflow-auto flex-1"
    >
      Main app content
    </div>
  </div>
</div>
`;
